updated pickle requirenments text

--- a/requirements.txt
+++ b/requirements.txt
@@ -20,8 +20,8 @@ pandas==0.25.1
 requests==2.22.0
 Werkzeug==0.16.0
 WTForms==2.2.1
-pickle
 collections
 random
 -r requirements/heroku.txt
 python-dotenv
+pickleshare==0.7.5
