--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,7 @@ requests==2.22.0
 Werkzeug==0.16.0
 WTForms==2.2.1
 collections-extended
-random
+random2
 -r requirements/heroku.txt
 python-dotenv
 pickleshare==0.7.5
